--- a/style.css
+++ b/style.css
@@ -1,18 +1,7 @@
-body{
-    /* background-color: #00aaff; */
-    text-align:center;
+html, body {
+    margin: 0;
+    padding: 0;
   }
-  
-  h1{
-    /* background-color: #ffffff; */
+  canvas {
+    display: block;
   }
-  
-  p{
-    font-size: 18px;
-  }
-  
-  canvas{
-    /* border: thin solid red; */
-  }
-
-  /* div {width: 100%; height: 100%;} */
